inital list of names implemented

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,13 +43,18 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 
-  color: white;
+  color: black;
   background: black;
 }
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
+}
+main {
+  width: 90%;
+  max-width: 60rem;
+  margin: 5rem auto;
 }
 
 a {
