--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import 'variables/colors';
+
 /* Box sizing rules */
 *,
 * ::before,
@@ -43,8 +45,8 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 
-  color: black;
-  background: black;
+  color: var(--foreground);
+  background: var(--background);
 }
 
 /* A elements that don't have a class get default styles */
