--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,7 @@
-@import 'variables/colors';
+@import 'variables';
+@import 'themes';
+@import 'mixins/flex-toolkit';
+@import 'center';
 
 /* Box sizing rules */
 *,
@@ -45,8 +48,10 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 
-  color: var(--foreground);
-  background: var(--background);
+  @include theme() {
+    color: theme-get('text-color');
+    background-color: theme-get('bg-color');
+  }
 }
 
 /* A elements that don't have a class get default styles */
@@ -62,6 +67,16 @@ main {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.main-container {
+  height: 100vh;
+  margin: 0;
+  @include flex-column;
+}
+
+footer {
+  margin-top: auto;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
