--- a/components/ui/card/card.module.scss
+++ b/components/ui/card/card.module.scss
@@ -1,5 +1,8 @@
+@import '/styles/variables';
+
 .card {
-  background-color: white;
+  background-color: $card-clr-bg;
   border-radius: 6px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: $card-box-shadow;
+  color: $on-background;
 }
