--- a/components/ui/header/header.module.scss
+++ b/components/ui/header/header.module.scss
@@ -9,7 +9,7 @@
 .container {
   width: 90%;
   max-width: 60rem;
-  padding: 0.5rem 0;
 
   @include flex-sb-horiz;
+  @include flex-center-vert;
 }
