added logo as svg and changes the color with theme

--- a/components/SingleLaunch/rocket-information/rocket-info.module.scss
+++ b/components/SingleLaunch/rocket-information/rocket-info.module.scss
@@ -21,8 +21,10 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  svg > path {
-    fill: $on-background;
+  svg {
+    path {
+      fill: $on-background;
+    }
   }
 }
 
